welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:3: error: type mismatch;
 found   : Unit
 required: Int
  for ( j <- 0 to n-1){
          ^